# DogBot

./: .gitignore  .session-context.md  AGENTS.md  Dockerfile  ENVIRONMENT.md  compile_commands.json
.devcontainer/: devcontainer.json
.github/workflows/: update-image.yml
.script/: attach-remote  build-dogbot  build-dogbot-cross  clean-dogbot  docker-build-all  fix-sysroot-cross-paths  launch-dogbot  launch-unitree  sync-remote
.script/template/: dogbot-service  entrypoint  env_setup.bash  env_setup.zsh
.ssh/: config
Environment_Configuration/: Init.sh
docs/: deploy-runtime.md  runtime-env-vars.md  ssh-password-auth.md  附件1《总线舵机指令表》.docx
docs/zh-cn/: deploy-runtime.md  docker-build.md  launch-system.md  workflow.md
dogbot_ws/src/example/example/puppy_with_arm/: color_detect_launch.py
dogbot_ws/src/large_models/large_models/: action.py  llm_tracking.py
dogbot_ws/src/peripherals/launch/: start_node_nav.launch.py
go2_description/urdf/: go2_description.urdf
ros2_ws/: toolchain.cmake
ros2_ws/example/example/mediapipe_pose/: mediapipe_pose_node.py  self_segmentation.py
ros2_ws/example/example/puppy_with_arm/: color_place_nav1.py
ros2_ws/example/example/puppy_with_arm/include/: color_grab.py  color_grab1.py  visual_patrol_with_arm.py
ros2_ws/large_models/large_models/: vllm_watch_dogs.py  vllm_with_camera.py
ros2_ws/src/app/app/: lidar.py
ros2_ws/src/dogbot_core/: CMakeLists.txt  package.xml
ros2_ws/src/dogbot_core/config/: leg_controller_params.yaml  nodes.yaml
ros2_ws/src/dogbot_core/src/: dogbot_core_node.cpp
ros2_ws/src/dogbot_core/src/controller/: gait_config.hpp  gait_engine.hpp  leg_controller.cpp  leg_solver.hpp  trajectory.hpp
ros2_ws/src/dogbot_core/src/hardware/: dogbot.cpp  dogbot_core_node.cpp
ros2_ws/src/dogbot_core/src/hardware/device/: ZX30S.hpp
ros2_ws/src/dogbot_core/src/hardware/serial/: serial.hpp
ros2_ws/src/dogbot_start/: CMakeLists.txt  package.xml
ros2_ws/src/dogbot_start/launch/: start.launch.py
ros2_ws/src/driver/sdk/: package.xml
ros2_ws/src/driver/sdk/sdk/: Camera.py
ros2_ws/src/example/example/: package.xml
ros2_ws/src/example/example/advanced_functions/include/: negotiate_stairs_demo.py
ros2_ws/src/example/example/mediapipe_pose/: face_detect.py
ros2_ws/src/example/example/opencv_course/: apriltag_ar_demo.py
ros2_ws/src/example/example/puppy_with_arm/: hand_control_with_arm.launch.py
ros2_ws/src/example/example/puppy_with_arm/include/: color_detect_with_arm.py
ros2_ws/src/example/example/puppypi_with_sensor/: sonar_avoidance.py  sonar_control_demo.py
ros2_ws/src/lab_config/: package.xml
ros2_ws/src/large_models/: package.xml
ros2_ws/src/large_models/large_models/: 13.py  llm_temperature.py
ros2_ws/src/large_models/launch/: track_start.launch.py
ros2_ws/src/navigation/: package.xml
ros2_ws/src/peripherals/: package.xml
ros2_ws/src/peripherals/launch/: lidar_filter.launch.py
ros2_ws/src/peripherals/peripherals/: remote_control_joystick.py  remote_control_joystick0.py
ros2_ws/src/serial_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/serial_bridge/config/: nodes.yaml
ros2_ws/src/serial_bridge/src/: serial_bridge_node.cpp
ros2_ws/src/simulations/puppypi_description/: package.xml
ros2_ws/src/simulations/puppypi_description/urdf/: puppy.xacro
ros2_ws/src/slam/: package.xml
