<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>peripherals</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1270161395@qq.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ros_robot_controller_msgs</exec_depend>
  <exec_depend>puppy_control_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pygame</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
